[refactor] Category 목록 반환에 DTO 적용 Category 목록 반환에서 Controller와 Service간에 CategoryListDTO를 적용해서 처리하였습니다.
관련 이슈: #7