@@ -5,14 +5,16 @@ import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import team7.inplace.place.domain.Category;
+import team7.inplace.place.domain.CategoryListDTO;
 
 @Service
 public class PlaceServiceImpl implements PlaceService{
 
     @Override
-    public List<String> getCategories() {
-        return Arrays.stream(Category.values())
-            .map(Enum::name)
-            .collect(Collectors.toList());
+    public CategoryListDTO getCategories() {
+        List<String>  categories = Arrays.stream(Category.values())
+                                        .map(Enum::name)
+                                        .toList();
+        return new CategoryListDTO(categories);
     }
 }
